discussion/kv_engine/179152/179152_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Rename dcp_conn_buffer_ratio into dcp_consumer_buffer_ratio

Naming's particularly important here.

The param controls the limit of buffers that are allocated only at DCP
Consumer.
That is part of our DCP Flow Control implementation. If OOM, the
Consumer starts buffering messages rather than processing them, which
also means that the Consumer doesn't ack bytes back to the Producer.

IMPORTANT: The param doesn't have any direct effect on buffer sizing at
Producer.

Change-Id: I5bb4e80ebe7d05a92749738e3956cbd1b97eed26

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-08-24 07:43:56.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-24 07:54:02.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19686/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2594:16: error: no member named "setConsumerBufferRatio" in "Configuration"; did you mean "setDcpConsumerBufferRatio"? [clang-diagnostic-error]
        config.setConsumerBufferRatio(-0.001);
               ^~~~~~~~~~~~~~~~~~~~~~
               setDcpConsumerBufferRatio
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/kv_engine/engines/ep/src/generated_configuration.h:84:10: note: "setDcpConsumerBufferRatio" declared here
    void setDcpConsumerBufferRatio(const float &nval);
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2608:16: error: no member named "setConsumerBufferRatio" in "Configuration"; did you mean "setDcpConsumerBufferRatio"? [clang-diagnostic-error]
        config.setConsumerBufferRatio(0.5);
               ^~~~~~~~~~~~~~~~~~~~~~
               setDcpConsumerBufferRatio
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/kv_engine/engines/ep/src/generated_configuration.h:84:10: note: "setDcpConsumerBufferRatio" declared here
    void setDcpConsumerBufferRatio(const float &nval);
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19686/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2594:16:
error: no member named "setConsumerBufferRatio" in "Configuration"; did you mean "setDcpConsumerBufferRatio"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19686/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48604/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\dcp_test.cc(2594): error C2039: "setConsumerBufferRatio": is not a member of "Configuration" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48604/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9379/ : FAILURE

Compile error at [2022-08-24T07:46:50.038Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2594:16:
error: no member named "setConsumerBufferRatio" in "Configuration"; did you mean "setDcpConsumerBufferRatio"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9379/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20908/ : FAILURE

Compile error at [2022-08-24T07:51:59.559Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2594:16:
error: no member named "setConsumerBufferRatio" in "Configuration"; did you mean "setDcpConsumerBufferRatio"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20908/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21629/ : FAILURE

Compile error at [2022-08-24T07:47:31.552Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2594:16:
error: ?class Configuration? has no member named ?setConsumerBufferRatio?; did you mean ?setDcpConsumerBufferRatio??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21629/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21984/ : FAILURE

Compile error at [2022-08-24T07:46:58.190Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2594:16:
error: ?class Configuration? has no member named ?setConsumerBufferRatio?; did you mean ?setDcpConsumerBufferRatio??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21984/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22713/ : FAILURE

Compile error at [2022-08-24T07:46:47.479Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2594:16:
error: no member named "setConsumerBufferRatio" in "Configuration"; did you mean "setDcpConsumerBufferRatio"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22713/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30012/ : FAILURE

Compile error at [2022-08-24T07:47:15.509Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2594:16:
error: no member named "setConsumerBufferRatio" in "Configuration"; did you mean "setDcpConsumerBufferRatio"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30012/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9478/ : FAILURE

Compile error at [2022-08-24T07:51:12.386Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2594:16:
error: ?class Configuration? has no member named ?setConsumerBufferRatio?; did you mean ?setDcpConsumerBufferRatio??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9478/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18902/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40852/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
